--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="conoce_tu_futuro">Conoce tu Futuro</string>
     <string name="todo">TODO</string>
     <string name="escribe_tu_mensaje">ESCRIBE TU MENSAJE</string>
+    <string name="mensae">...</string>
+    <string name="revela_tu_futuro">Revela tu futuro</string>
+    <string name="revela_tu_destino">revela_tu_destino</string>
 </resources>
